[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PlanetOrbit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Marker.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SetProjectilePath.gd" type="Script" id=3]
[ext_resource path="res://art/SkyBkgd.png" type="Texture" id=4]
[ext_resource path="res://art/Circle.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1455.0
margin_bottom = 1092.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 305, 124 )
rotation = 2.51434
current = true
zoom = Vector2( 15, 15 )

[node name="PlanetOrbit" parent="." instance=ExtResource( 1 )]

[node name="PlanetOrbit2" parent="." instance=ExtResource( 1 )]
position = Vector2( 98.2739, 62.9961 )

[node name="PlanetOrbit3" parent="." instance=ExtResource( 1 )]
position = Vector2( 30.2382, 221.746 )

[node name="HeavyMass" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 2.45087, 403.777 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 290.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 38.0
text = "current_speed =
offset = "
__meta__ = {
"_edit_use_anchors_": false
}
